# INOMAD-Public

./: .gitignore  AUDIT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rust-toolchain.toml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/: README.md
pallets/access-nft/: Cargo.toml
pallets/access-nft/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/achievement-nft/: Cargo.toml
pallets/achievement-nft/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/altan-tax/: Cargo.toml
pallets/altan-tax/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/altan-vault/: Cargo.toml
pallets/altan-vault/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/annual-profit-tax/: Cargo.toml
pallets/annual-profit-tax/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/bank-of-siberia/: Cargo.toml
pallets/bank-of-siberia/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/bank-operator/: Cargo.toml
pallets/bank-operator/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/black-book/: Cargo.toml
pallets/black-book/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/buryad-mongol-mixer/: Cargo.toml
pallets/buryad-mongol-mixer/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/central-bank/: Cargo.toml
pallets/central-bank/src/: benchmarking.rs  lib.rs  migrations.rs  tests.rs  weights.rs
pallets/chancery/: Cargo.toml
pallets/chancery/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/chronicles/: Cargo.toml
pallets/chronicles/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/citizen-voice/: Cargo.toml
pallets/citizen-voice/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/constitution/: Cargo.toml
pallets/constitution/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/decimal-dao/: Cargo.toml
pallets/decimal-dao/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/foreign-affairs/: Cargo.toml
pallets/foreign-affairs/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/forums/: Cargo.toml
pallets/forums/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/guilds/: Cargo.toml
pallets/guilds/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/inheritance/: Cargo.toml
pallets/inheritance/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/inomad-elections/: Cargo.toml
pallets/inomad-elections/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/inomad-identity/: Cargo.toml
pallets/inomad-identity/src/: benchmarking.rs  citizenship_tests.rs  lib.rs  migrations.rs  mock.rs  weights.rs
pallets/judicial-courts/: Cargo.toml
pallets/judicial-courts/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/khural-governance/: Cargo.toml
pallets/khural-governance/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/land-registry/: Cargo.toml
pallets/land-registry/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/licensing/: Cargo.toml
pallets/licensing/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/migration-center/: Cargo.toml
pallets/migration-center/src/: lib.rs  mock.rs  tests.rs
pallets/org-roles/: Cargo.toml
pallets/org-roles/src/: lib.rs  mock.rs  tests.rs
pallets/organization/: Cargo.toml
pallets/organization/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/recovery-nft/: Cargo.toml
pallets/recovery-nft/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/shielded-vaults/: Cargo.toml
pallets/shielded-vaults/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/steppe-offline/: Cargo.toml
pallets/steppe-offline/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml  build.rs
runtime/src/: benchmarks.rs  genesis_config_presets.rs  lib.rs  origins.rs  sovereign_accounts.rs
runtime/src/configs/: mod.rs
