[workspace.package]
license = "Apache-2.0"
authors = ["iNOMAD LLC (TX, USA) <ceo@inomad.life>"]
homepage = "https://altan.network"
repository = "https://github.com/Khongirad/altan-network.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/template",
    "pallets/altan-tax",
    "pallets/annual-profit-tax",

    "pallets/inomad-identity",
    "pallets/khural-governance",
    "pallets/steppe-offline",
    "pallets/judicial-courts",
    "pallets/bank-operator",
    "pallets/chronicles",
    "pallets/guilds",
    "pallets/inheritance",
    "pallets/citizen-voice",
    "pallets/black-book",
    "pallets/chancery",
    "pallets/central-bank",
    "pallets/bank-of-siberia",
    "pallets/constitution",
    "pallets/land-registry",
    "pallets/forums",
    "pallets/organization",
    "pallets/shielded-vaults",
    "pallets/foreign-affairs",
    "pallets/decimal-dao",
    "pallets/licensing",
    "pallets/buryad-mongol-mixer",
    "pallets/inomad-elections",
    "pallets/altan-vault",
    "pallets/access-nft",
    "pallets/achievement-nft",
    "pallets/recovery-nft",
    "pallets/migration-center",
    "pallets/org-roles",
    "runtime",
]
resolver = "2"


[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }
# `substrate_runtime` is a common `cfg` condition name used in the repo.
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(build_opt_level, values("3"))',
	'cfg(build_profile, values("debug", "release"))',
	'cfg(enable_alloc_error_handler)',
	'cfg(fuzzing)',
	'cfg(ignore_flaky_test)',
	'cfg(substrate_runtime)',
] }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
bind_instead_of_map = { level = "allow", priority = 2 }              # stylistic
borrowed-box = { level = "allow", priority = 2 }                     # Reasonable to fix this one
complexity = { level = "warn", priority = 1 }
correctness = { level = "warn", priority = 1 }
default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic
derivable_impls = { level = "allow", priority = 2 }                  # false positives
eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
if-same-then-else = { level = "allow", priority = 2 }
needless-lifetimes = { level = "allow", priority = 2 }               # generated code
needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
nonminimal-bool = { level = "allow", priority = 2 }                  # maybe
option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
too-many-arguments = { level = "allow", priority = 2 }               # (Turning this on would lead to)
type_complexity = { level = "allow", priority = 2 }                  # raison d'etre
unit_arg = { level = "allow", priority = 2 }                         # stylistic
unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
useless_conversion = { level = "allow", priority = 2 }               # Types may change
while_immutable_condition = { level = "allow", priority = 2 }        # false positives
zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000

[workspace.dependencies]
altan-network-runtime = { path = "./runtime", default-features = false }
pallet-template = { path = "./pallets/template", default-features = false }
pallet-altan-tax = { path = "./pallets/altan-tax", default-features = false }
pallet-annual-profit-tax = { path = "./pallets/annual-profit-tax", default-features = false }

pallet-altan-vault = { path = "./pallets/altan-vault", default-features = false }
pallet-inomad-identity = { path = "./pallets/inomad-identity", default-features = false }
pallet-khural-governance = { path = "./pallets/khural-governance", default-features = false }
pallet-steppe-offline = { path = "./pallets/steppe-offline", default-features = false }
pallet-judicial-courts = { path = "./pallets/judicial-courts", default-features = false }
pallet-bank-operator = { path = "./pallets/bank-operator", default-features = false }
pallet-chronicles = { path = "./pallets/chronicles", default-features = false }
pallet-guilds = { path = "./pallets/guilds", default-features = false }
pallet-inheritance = { path = "./pallets/inheritance", default-features = false }
pallet-citizen-voice = { path = "./pallets/citizen-voice", default-features = false }
pallet-black-book = { path = "./pallets/black-book", default-features = false }
pallet-chancery = { path = "./pallets/chancery", default-features = false }
pallet-central-bank = { path = "./pallets/central-bank", default-features = false }
pallet-bank-of-siberia = { path = "./pallets/bank-of-siberia", default-features = false }
pallet-constitution = { path = "./pallets/constitution", default-features = false }
pallet-land-registry = { path = "./pallets/land-registry", default-features = false }
pallet-forums = { path = "./pallets/forums", default-features = false }
pallet-organization = { path = "./pallets/organization", default-features = false }
pallet-shielded-vaults = { path = "./pallets/shielded-vaults", default-features = false }
pallet-foreign-affairs = { path = "./pallets/foreign-affairs", default-features = false }
pallet-decimal-dao = { path = "./pallets/decimal-dao", default-features = false }
pallet-licensing = { path = "./pallets/licensing", default-features = false }
pallet-buryad-mongol-mixer = { path = "./pallets/buryad-mongol-mixer", default-features = false }
pallet-inomad-elections = { path = "./pallets/inomad-elections", default-features = false }
pallet-access-nft = { path = "./pallets/access-nft", default-features = false }
pallet-achievement-nft = { path = "./pallets/achievement-nft", default-features = false }
pallet-recovery-nft = { path = "./pallets/recovery-nft", default-features = false }
pallet-migration-center = { path = "./pallets/migration-center", default-features = false }
pallet-org-roles = { path = "./pallets/org-roles", default-features = false }
clap = { version = "4.5.13" }
frame-benchmarking-cli = { version = "53.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.13.0", default-features = false }
frame-system = { version = "45.0.0", default-features = false }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.10" }
pallet-transaction-payment = { version = "45.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "48.0.0", default-features = false }
sc-basic-authorship = { version = "0.53.0", default-features = false }
sc-cli = { version = "0.57.0", default-features = false }
sc-client-api = { version = "44.0.0", default-features = false }
sc-consensus = { version = "0.54.0", default-features = false }
sc-consensus-aura = { version = "0.55.0", default-features = false }
sc-consensus-grandpa = { version = "0.40.0", default-features = false }
sc-executor = { version = "0.47.0", default-features = false }
sc-network = { version = "0.55.1", default-features = false }
sc-offchain = { version = "50.0.0", default-features = false }
sc-service = { version = "0.56.0", default-features = false }
sc-telemetry = { version = "30.0.0", default-features = false }
sc-transaction-pool = { version = "44.1.0", default-features = false }
sc-transaction-pool-api = { version = "43.0.0", default-features = false }
sp-api = { version = "40.0.0", default-features = false }
sp-block-builder = { version = "40.0.0", default-features = false }
sp-blockchain = { version = "43.0.0", default-features = false }
sp-consensus-aura = { version = "0.46.0", default-features = false }
sp-core = { version = "39.0.0", default-features = false }
sp-genesis-builder = { version = "0.21.0", default-features = false }
sp-inherents = { version = "40.0.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-keyring = { version = "45.0.0", default-features = false }
sp-runtime = { version = "45.0.0", default-features = false }
sp-timestamp = { version = "40.0.0", default-features = false }
substrate-frame-rpc-system = { version = "49.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
codec = { version = "3.7.5", default-features = false, package = "parity-scale-codec" }
frame-benchmarking = { version = "45.0.1", default-features = false }
frame-executive = { version = "45.0.1", default-features = false }
frame-support = { version = "45.1.0", default-features = false }
frame-system-benchmarking = { version = "45.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "40.0.0", default-features = false }
frame-try-runtime = { version = "0.51.0", default-features = false }
pallet-aura = { version = "44.0.0", default-features = false }
pallet-balances = { version = "46.0.0", default-features = false }
pallet-grandpa = { version = "45.0.0", default-features = false }
pallet-sudo = { version = "45.0.0", default-features = false }
pallet-multisig = { version = "45.0.0", default-features = false }
pallet-proxy = { version = "45.0.0", default-features = false }
pallet-timestamp = { version = "44.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "45.0.0", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
sp-consensus-grandpa = { version = "27.0.0", default-features = false }
sp-offchain = { version = "40.0.0", default-features = false }
sp-session = { version = "42.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-transaction-pool = { version = "40.0.0", default-features = false }
sp-version = { version = "43.0.0", default-features = false }
substrate-wasm-builder = { version = "31.1.0", default-features = false }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

