[package]
name = "pallet-achievement-nft"
description = "Altan Network — Achievement NFTs (reputation) + Reward NFTs (ALTAN-backed)"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec      = { features = ["derive"], default-features = false, workspace = true }
scale-info = { features = ["derive", "serde"], default-features = false, workspace = true }
frame-support = { default-features = false, workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-system  = { default-features = false, workspace = true }

[dev-dependencies]
pallet-balances = { default-features = false, workspace = true }
sp-io = { default-features = false, workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
	"frame-benchmarking?/std",
    "frame-system/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks","frame-support/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
