[package]
name = "pallet-black-book"
version = "0.1.0"
authors = ["Altan Network"]
edition = "2021"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
codec = { default-features = false, workspace = true }
scale-info = { default-features = false, workspace = true }
frame-support    = { workspace = true }
frame-system     = { workspace = true }
sp-core          = { workspace = true }
sp-runtime       = { workspace = true }
pallet-balances  = { workspace = true, optional = true }

# Cross-pallet deps — accessed via interface traits only (loose coupling).
pallet-inomad-identity = { workspace = true }
# [VECTOR 3] AcademyInterface trait — checks AcademyMembers in pallet-guilds.
pallet-guilds = { workspace = true }

frame-benchmarking = { optional = true, workspace = true }
[dev-dependencies]
sp-io          = { default-features = false, workspace = true }
pallet-balances = { default-features = false, workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
	"frame-benchmarking?/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "pallet-inomad-identity/std",
    "pallet-guilds/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-inomad-identity/runtime-benchmarks",
    "pallet-guilds/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-inomad-identity/try-runtime",
    "pallet-guilds/try-runtime",
]
