[package]
name = "pallet-chancery"
description = "Altan Network: Universal Digital Chancellery — on-chain multi-sig Ricardian contracts with professional validator integration (Lawyers, Notaries, Mediators)."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], default-features = false, workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
scale-info = { features = ["derive"], default-features = false, workspace = true }
# sp-core provides H256 for document hash (Blake2_256 content-addressable agreement key)
sp-core = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
# OnTerminalStatus trait: cascade ghost-state cleanup on deceased/exiled citizens
pallet-inomad-identity = { path = "../inomad-identity", default-features = false }

[dev-dependencies]
sp-io = { default-features = false, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-inomad-identity/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
