[package]
name = "pallet-decimal-dao"
description = "Altan Network: Generic Decimal DAO Core — powers State Branches (Legislative/Executive/Judicial/Audit), Enterprises, and Guilds with unified council governance and keyless treasury execution."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], default-features = false, workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
scale-info = { features = ["derive"], default-features = false, workspace = true }
sp-core = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }

[dev-dependencies]
pallet-balances = { default-features = false, workspace = true }
sp-io = { default-features = false, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
