[package]
name = "pallet-forums"
version = "0.1.0"
edition = "2021"
authors = ["Altan Network Contributors"]
description = "Threaded hierarchical forums for Arbad, Zun, and Khural contexts — Chain of Legitimacy: Вложенное Общение"
repository = "https://github.com/Khongirad/INOMAD-Core_Private"
license = "Apache-2.0"

[dependencies]
codec       = { package = "parity-scale-codec", version = "3.7", default-features = false, features = ["derive"] }
scale-info  = { version = "2.11", default-features = false, features = ["derive"] }

frame-support = { default-features = false, workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-system  = { default-features = false, workspace = true }

pallet-inomad-identity = { path = "../inomad-identity", default-features = false }

[dev-dependencies]
sp-io      = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
sp-core    = { default-features = false, workspace = true }
pallet-balances = { default-features = false, workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
	"frame-benchmarking?/std",
    "frame-system/std",
    "pallet-inomad-identity/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks","frame-support/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
