[package]
name = "pallet-khural-governance"
description = "Altan Network: Khural democratic governance, proposal voting, and nation treasury execution pallet."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], default-features = false, workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
scale-info = { features = ["derive"], default-features = false, workspace = true }
# Tight coupling to pallet-inomad-identity for CitizenRecord / CitizenRole access.
pallet-inomad-identity = { path = "../inomad-identity", default-features = false }
# Currency trait for nation treasury → beneficiary transfers.
pallet-balances = { workspace = true, default-features = false }
# Loose coupling to pallet-guilds for AcademyInterface (Academician gate on expert bills).
pallet-guilds = { path = "../guilds", default-features = false }
# H256 for expert bill content hashes.
sp-core = { default-features = false, workspace = true }

[dev-dependencies]
sp-core = { default-features = false, workspace = true }
sp-io = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
pallet-balances = { default-features = false, workspace = true }
pallet-inomad-identity = { path = "../inomad-identity", default-features = false }
pallet-guilds = { path = "../guilds", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-guilds/std",
	"pallet-inomad-identity/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-guilds/runtime-benchmarks",
	"pallet-inomad-identity/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-guilds/try-runtime",
	"pallet-inomad-identity/try-runtime",
	"sp-runtime/try-runtime",
]
# Activates production-grade governance origins (Sprint L1-06).
# In production builds, use:
#   cargo build --features production-origins
# This transitions EnsureKhural from EnsureRoot fallback to dedicated
# KhuralGovernance origin emitted only on successful Khural votes.
production-origins = []
