[package]
name = "pallet-licensing"
version = "0.1.0"
description = "Altan Network — Constitutional Licensing & Land Fund pallet"
authors = ["INOMAD INC"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Khongirad/INOMAD-Core_Private"
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec       = { package = "parity-scale-codec", version = "3.7.4", features = ["derive"], default-features = false }
scale-info  = { version = "2.11.6", features = ["derive"], default-features = false }

frame-support = { default-features = false, workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-system  = { default-features = false, workspace = true }
sp-core       = { default-features = false, workspace = true }

pallet-inomad-identity = { default-features = false, path = "../inomad-identity" }
pallet-organization    = { default-features = false, path = "../organization" }

[dev-dependencies]
sp-io           = { workspace = true }
sp-runtime      = { workspace = true }
sp-core         = { workspace = true }
frame-system    = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
	"frame-benchmarking?/std",
    "frame-system/std",
    "sp-core/std",
    "pallet-inomad-identity/std",
    "pallet-organization/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
# Activates production-grade governance origins.
# In production builds, use:
#   cargo build --features production-origins
# This replaces EnsureRoot with sovereign elected-branch Origins.
production-origins = []
